# lab_6.2

./: CMakeLists.txt  Fraction.cpp  Fraction.h  README.md  UnitTest.cpp  main.cpp
